mule-user-guide/v/3.8/exception-strategy-configuration-reference.adoc
= 例外策略配置参考
:keywords: error handling, exceptions, exception catching, exceptions

此页面提供有关为异常策略配置的元素的详细信息。这些信息直接从`mule.xsd`中提取并被缓存。如果信息看起来已过时，请刷新页面。有关例外策略的更多信息，请参阅 link:/mule-user-guide/v/3.8/error-handling[错误处理]。

== 默认的例外策略

提供默认的异常处理。

。<default-exception-strategy...>的属性
[%header,cols="30a,70a"]
|===
| {名称{1}}说明
| `enableNotifications`  |确定发生异常时是否从该策略中触发`ExceptionNotifications`。默认值是true。

*Type*：`boolean` +
*Required*：否+
*Default*：`true`
| `name`  |'exception-strategy'元素的ref属性中使用的异常策略的名称。

*Type*：`name (no spaces)` +
*Required*：否+
*Default*：无
| `when`  |要评估表达式以确定是否应执行此异常策略。这应该始终是一个布尔表达式。

*Type*：`string` +
*Required*：否+
*Default*：无
|  `logException`  |确定在处理之前是否将处理的异常记录在ERROR级别的标准记录器中。默认值是true。

*Type*：`boolean` +
*Required*：否+
*Default*：`true`
| `stopMessageProcessing`  |发生异常时停止流/服务。在此之后手动重启流程/服务（例如，使用JMX）。

*Type*：`boolean` +
*Required*：否+
*Default*：`false`
|===

。<default-exception-strategy...>的子元素
[%header,cols="30a,10a,60a"]
|===
| {名称{1}}基数 |说明
| `commit-transaction`  | 0..1  |在异常策略处理后，这些例外被视为"delivered"。任何不被这个过滤器接受的异常都会被重新发送/回滚。您可以设置与当前异常的完全限定类名匹配的通配符模式的逗号分隔列表。
| `rollback-transaction`  | 0..1  |这些异常在异常策略处理后重新发送/回滚。您可以设置与当前异常的完全限定类名匹配的通配符模式的逗号分隔列表。
| `abstract-message-processor`  | 0..1  |消息处理器消息处理器元素的占位符。
| `abstract-outbound-endpoint`  | 0..1  |出站端点出站端点元素的占位符。出站端点将消息分派到底层传输。
| `abstract-mixed-content-message-processor`  | 0..1  |消息处理器元素的占位符。
|===

== 自定义例外策略

用户定义的异常策略。

。<custom-exception-strategy...>的属性
[%header,cols="30a,70a"]
|===
| {名称{1}}说明
| `enableNotifications`  |确定发生异常时是否从此策略中触发ExceptionNotifications。默认值是true。

*Type*：`boolean` +
*Required*：否+
*Default*：`true`
| `name`  |在`exception-strategy`元素的ref属性中使用的异常策略的名称。

*Type*：`name (no spaces)` +
*Required*：否+
*Default*：无
| `when`  |评估表达式以确定是否应执行此异常策略。这应该始终是一个布尔表达式。

*Type*：`string` +
*Required*：否+
*Default*：无
| `class`  |实现ExceptionListener接口的类。另外，如果指定了`outbound-endpoint`元素，则将其设置为"endpoint" bean属性。

*Type*：`class name` +
*Required*：是+
*Default*：`true`
|===

。<custom-exception-strategy...>的子元素
[%header,cols="30a,10a,60a"]
|===
| {名称{1}}基数 |说明
| `commit-transaction`  | 0..1  |在异常策略处理后，这些例外被视为"delivered"。任何不被这个过滤器接受的异常都会被重新发送/回滚。您可以设置与当前异常的完全限定类名相匹配的通配符模式的逗号分隔列表。
| `rollback-transaction`  | 0..1  |这些异常在异常策略处理后重新发送/回滚。您可以设置与当前异常的完全限定类名相匹配的通配符模式的逗号分隔列表。
| `abstract-message-processor`  | 0..1  |消息处理器消息处理器元素的占位符。
| `abstract-outbound-endpoint`  | 0..1  |出站端点出站端点元素的占位符。出站端点将消息分派到底层传输。
| `abstract-mixed-content-message-processor`  | 0..1  |消息处理器元素的占位符。
| `spring:property`  | 0 .. *  |自定义配置的Spring样式属性元素。
|===

